Opened 10 years ago
Closed 9 years ago
#12244 closed bug (fixed)
net_server: warning on delete of address of a reference
Reported by: | korli | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Servers/net_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Newer versions of GCC produces this warning at this line
error: the compiler can assume that the address of 'service' will never be NULL
This probably means that the compiler knows that delete checks for NULL pointers, whereas it also knows that the address of 'service' cannot be NULL. The delete check might then be pointless.
To fix this, I'd move 'service' to a pointer and adjust all callers.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev49868.