net_server: warning on delete of address of a reference.

* fixes #12244.